--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
-    "name": "agnes/itexmo-sms",
+    "name": "itexmo/itexmo-sms",
     "description": "Itexmo SMS Gateway Integration for Laravel",
     "type": "library",
     "require": {
         "php": "^7.1.3",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/support": "5.8.*"
-
-    
+        "illuminate/support": "5.8.*",
+        "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
@@ -15,19 +14,25 @@
     },
     "autoload": {
         "psr-4": {
-            "Agnes\\ItexmoSms\\": "src/"
+            "Itexmo\\ItexmoSms\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Agnes\\ItexmoSms\\Tests\\": "tests/"
+            "Itexmo\\ItexmoSms\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Agnes\\ItexmoSms\\ItexmoSmsServiceProvider"
+                "Itexmo\\ItexmoSms\\ItexmoSmsServiceProvider"
             ]
         }
-    }
+    },
+    "authors": [
+        {
+            "name": "Agnes Mbiti",
+            "email": "agypeter97@gmail.com"
+        }
+    ]
 }
