--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": "^7.1.3",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/support": "5.8.*",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "laravel/framework": "5.8.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
