add Licence file

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,6 @@
             "name": "Agnes Mbiti",
             "email": "agypeter97@gmail.com"
         }
-    ]
+    ],
+    "license": "MIT" 
 }
