--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,6 @@
             "email": "agypeter97@gmail.com"
         }
     ],
-    "license": "MIT" 
+    "license": "MIT",
+    "version": "1.0.2"  
 }
